public class Main {
    public static void main(String[] args){


        //lav 3 biler:

    }
}
